# N-Body-Physics

./: CMakeLists.txt
build_linux/: NBodyPhysics
libraries/gl3w-master/: CMakeLists.txt
src/: .planet.c.swp  camera.c  camera.h  component.h  input.c  input.h  main.c  planet.c  planet.h  shader.c  shader.h  sphere.h  time.c  time.h  vector.c  vector.h  world.c  world.h
